[UPD] get single concept from repositories
