# proxy-server/swagger_server/controllers/search_controller.py
@@ -3,6 +3,7 @@ from swagger_server.models.concept import Concept
 from swagger_server.models.concepts import Concepts
 from swagger_server.models.error import Error
 from swagger_server.models.search import Search
+from swagger_server.models.search_results import SearchResults
 from datetime import date, datetime
 from typing import List, Dict
 from six import iteritems
@@ -12,6 +13,7 @@ import os
 import imp
 import operator
 import time
+import urllib
 
 
 dir_path = os.path.dirname(os.path.realpath(__file__))
@@ -83,7 +85,10 @@ def search(query):
                         setattr(resp, attr, get_value(item))
                     except:
                         pass
-                obj.append(resp)
+                obj.append(SearchResults(
+                    repository=module.__name__,
+                    concept=resp,
+                ))
 
         except AttributeError as e:
             print("Exception when parsing API: %s\n" % e)
@@ -91,3 +96,157 @@ def search(query):
             print("Exception when calling API: %s\n" % e)
 
     return Search(query=query, results=obj)
+
+
+def select(ontology, iri):
+    """
+    
+    
+    :param ontology: 
+    :type ontology: str
+    :param iri: 
+    :type iri: str
+
+    :rtype: List[Search]
+    """
+    # return 'do some magic!'
+    obj = []
+
+    for item, module in iteritems(modules):
+
+        try:
+            module_api = module.ResourcesApi()
+
+            # OLS PoC, to be refactored
+            if 'ols' == module.__name__:
+                qri = urllib.parse.quote(iri, safe='')
+            else:
+                qri = iri
+
+            response = module_api.concept(ontology, qri)
+
+            meta = module.MetaConcept()
+
+            resp = Concept()
+            for attr, _obj in resp.swagger_types.items():
+                path = getattr(meta, attr, False)
+                if not path:
+                    continue
+                get_value = operator.attrgetter(path)
+                try:
+                    setattr(resp, attr, get_value(response))
+                except:
+                    pass
+            obj.append(SearchResults(
+                repository=module.__name__,
+                concept=resp,
+                children=select_children(module, ontology, iri),
+                parents=select_parents(module, ontology, iri)
+            ))
+
+        except AttributeError as e:
+            print("Exception when parsing API: %s\n" % e)
+        except module.rest.ApiException as e:
+            print("Exception when calling API: %s\n" % e)
+
+    return Search(query=iri, results=obj)
+
+
+def select_children(module, ontology, iri):
+    """
+    
+    
+    :param query: 
+    :type query: str
+
+    :rtype: List[Search]
+    """
+    # return 'do some magic!'
+    obj = []
+
+    try:
+        module_api = module.ResourcesApi()
+
+        if not getattr(module_api, 'children', None):
+            return obj
+
+        response = module_api.children(ontology, iri)
+
+        path = module.Meta().search_xpath
+        get_objects = operator.attrgetter(path)
+
+        concepts = get_objects(response) if path else response
+
+        page = getattr(response, 'page', False)
+        if page:
+            next_page = getattr(page, 'number', response.page) + 1
+            total_pages = getattr(page, 'total_pages',
+                getattr(response, 'page_count', 0))
+            for page in range(next_page, total_pages):
+                _next = module_api.search(ontology, iri, page=page)
+                concepts.extend(get_objects(_next))
+
+        meta = module.MetaConcept()
+
+        for item in concepts:
+            resp = Concept()
+            for attr, _obj in resp.swagger_types.items():
+                path = getattr(meta, attr, False)
+                if not path:
+                    continue
+                get_value = operator.attrgetter(path)
+                try:
+                    setattr(resp, attr, get_value(item))
+                except:
+                    pass
+            obj.append(resp)
+
+    except AttributeError as e:
+        print("Exception when parsing API: %s\n" % e)
+    except module.rest.ApiException as e:
+        print("Exception when calling API: %s\n" % e)
+
+    return obj
+
+
+def select_parents(module, ontology, iri):
+    """
+    
+    
+    :param query: 
+    :type query: str
+
+    :rtype: List[Search]
+    """
+    # return 'do some magic!'
+    obj = []
+
+    try:
+        module_api = module.ResourcesApi()
+
+        if not getattr(module_api, 'parents', None):
+            return obj
+
+        response = module_api.parents(ontology, iri)
+
+        meta = module.MetaConcept()
+
+        for item in response:
+            resp = Concept()
+            for attr, _obj in resp.swagger_types.items():
+                path = getattr(meta, attr, False)
+                if not path:
+                    continue
+                get_value = operator.attrgetter(path)
+                try:
+                    setattr(resp, attr, get_value(item))
+                except:
+                    pass
+            obj.append(resp)
+
+    except AttributeError as e:
+        print("Exception when parsing API: %s\n" % e)
+    except module.rest.ApiException as e:
+        print("Exception when calling API: %s\n" % e)
+
+    return obj
